welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:6: error: not found: value prendbiscuit
	prendbiscuit()
        ^