welcome.lessons.welcome.loopfor.LoopFor.scala.code
for(nbPas<-1 to 6) {
	avance();
}
for(dejafait<-1 to 6) {
	prendbiscuit()
}


